Fix quick command list UI, make label matched ones more visible

--- a/src/client/components/quick-commands/qm.styl
+++ b/src/client/components/quick-commands/qm.styl
@@ -29,7 +29,7 @@
 .fil-keyword
 .fil-label
   .qm-item
-    opacity .6
+    opacity .4
   .qm-item
     &.name-match
     &.label-match
